--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   firebase_storage: ^12.3.5
   image_picker: ^1.1.2
   google_sign_in: ^6.2.2
+  google_mlkit_document_scanner: ^0.3.0
+  pdf: ^3.11.1
+  share_plus: ^10.1.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
