--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^12.3.5
   image_picker: ^1.1.2
   google_sign_in: ^6.2.2
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
