--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   shared_preferences: ^2.3.3
   google_mlkit_document_scanner: ^0.3.0
   pdf: ^3.11.1
-  share_plus: ^10.1.1
+  share:
   path_provider: ^2.1.5
 
 dev_dependencies:
