--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   pdf: ^3.11.1
   share_plus: ^10.1.1
   path_provider: ^2.1.5
+  file_picker: ^8.1.4
+  googleapis: ^13.2.0
 
 dev_dependencies:
   flutter_test:
