--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   path_provider: ^2.1.5
   file_picker: ^8.1.4
   googleapis: ^13.2.0
+  url_launcher: ^6.3.1
+  open_file: ^3.5.9
 
 dev_dependencies:
   flutter_test:
