--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   googleapis: ^13.2.0
   url_launcher: ^6.3.1
   open_file: ^3.5.9
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
