--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 xmlns:tools="http://schemas.android.com/tools">
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:label="Document Scanner - PDF Scanner App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
