--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   open_file: ^3.5.9
   lottie: ^3.1.3
   fluttertoast: ^8.2.8
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
